@@ -856,7 +856,7 @@ module ActiveMerchant #:nodoc:
           raw[:is3DSOrder] = true
         end
         success = success_from(action, raw, success_criteria)
-        message = message_from(success, raw, success_criteria)
+        message = message_from(success, raw, success_criteria, action)
 
         Response.new(
           success,
@@ -904,10 +904,10 @@ module ActiveMerchant #:nodoc:
         success_criteria_success?(raw, success_criteria) || action_success?(action, raw)
       end
 
-      def message_from(success, raw, success_criteria)
+      def message_from(success, raw, success_criteria, action)
         return 'SUCCESS' if success
 
-        raw[:iso8583_return_code_description] || raw[:error] || required_status_message(raw, success_criteria)
+        raw[:iso8583_return_code_description] || raw[:error] || required_status_message(raw, success_criteria, action) || raw[:issuer_response_description]
       end
 
       # success_criteria can be:
@@ -933,8 +933,11 @@ module ActiveMerchant #:nodoc:
         raw[:iso8583_return_code_code] || raw[:error_code] || nil unless success == 'SUCCESS'
       end
 
-      def required_status_message(raw, success_criteria)
-        "A transaction status of #{success_criteria.collect { |c| "'#{c}'" }.join(' or ')} is required." if !success_criteria.include?(raw[:last_event])
+      def required_status_message(raw, success_criteria, action)
+        return if success_criteria.include?(raw[:last_event])
+        return unless %w[cancel refund inquiry credit fast_credit].include?(action)
+
+        "A transaction status of #{success_criteria.collect { |c| "'#{c}'" }.join(' or ')} is required."
       end
 
       def authorization_from(action, raw, options)
